# azure-pull-details-of-resources-and-publish-in-a-graphical-way

./: README.md  azure_billing.py  azure_resource.py  common_util.py  pyproject.toml  resource_graph.py
